--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   dartz: ^0.10.1
   persistent_bottom_nav_bar: ^6.2.1
   flutter_screenutil: ^5.9.3
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
