--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   flutter_screenutil: ^5.9.3
   qr_flutter: ^4.1.0
+  carousel_slider: ^5.1.1
   dynamic_height_grid_view: ^0.0.4
 
 dev_dependencies:
