--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,16 @@ dependencies:
   carousel_slider: ^5.1.1
   dynamic_height_grid_view: ^0.0.4
 
+  #Local Storage
+  hive: ^2.2.3
+
+
+  # Debugging and Toaster
+  talker: ^5.0.0
+  talker_flutter: ^5.0.0
+  fluttertoast: ^8.2.12
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
