--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ dev_dependencies:
   freezed: ^2.4.6
   json_serializable: ^6.7.1
   injectable_generator: ^2.4.1
+  hive_generator: ^2.0.0
   flutter_screenutil: ^5.9.3
 
 # For information on the generic Dart part of this file, see the
