--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   hydrated_bloc: ^9.1.4
 
   # Navigation
-  go_router: ^13.2.0
+  go_router: 15.0.0
 
   # Network & API
   dio: ^5.4.0
@@ -62,11 +62,12 @@ dependencies:
   shared_preferences: ^2.5.3
   path_provider: ^2.1.5
   dartz: ^0.10.1
-  persistent_bottom_nav_bar: ^6.2.1
+  persistent_bottom_nav_bar_v2: ^6.1.0
   flutter_screenutil: ^5.9.3
   qr_flutter: ^4.1.0
   carousel_slider: ^5.1.1
   dynamic_height_grid_view: ^0.0.4
+  infinite_scroll_pagination: ^5.1.0
 
   #Local Storage
   hive: ^2.2.3
