--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   carousel_slider: ^5.1.1
   dynamic_height_grid_view: ^0.0.4
   infinite_scroll_pagination: ^5.1.0
+  iconsax_flutter: ^1.0.1
 
   #Local Storage
   hive: ^2.2.3
