--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   dynamic_height_grid_view: ^0.0.4
   infinite_scroll_pagination: ^5.1.0
   iconsax_flutter: ^1.0.1
+  date_picker_timeline: ^1.2.7
 
   #Local Storage
   hive: ^2.2.3
