--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   infinite_scroll_pagination: ^5.1.0
   iconsax_flutter: ^1.0.1
   date_picker_timeline: ^1.2.7
+  flutter_html: ^3.0.0
 
   #Local Storage
   hive: ^2.2.3
