--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   talker: ^5.0.0
   talker_flutter: ^5.0.0
   fluttertoast: ^8.2.12
+  flutter_inappwebview: ^6.1.5
 
 
 dev_dependencies:
@@ -100,6 +101,7 @@ dev_dependencies:
   injectable_generator: ^2.4.1
   hive_generator: ^2.0.0
   flutter_screenutil: ^5.9.3
+  flutter_launcher_icons: ^0.14.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -194,3 +196,10 @@ flutter:
 #          weight: 600
 #        - asset: assets/fonts/Inter/Inter-Bold.ttf
 #          weight: 700
+
+flutter_launcher_icons:
+  android: true
+  ios: false
+  image_path: "assets/images/jankuier_icon.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/images/jankuier_icon.png"
