--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   iconsax_flutter: ^1.0.1
   date_picker_timeline: ^1.2.7
   flutter_html: ^3.0.0
+  auto_size_text: ^3.0.0
 
   #Local Storage
   hive: ^2.2.3
