--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   date_picker_timeline: ^1.2.7
   flutter_html: ^3.0.0
   auto_size_text: ^3.0.0
+  slide_countdown: ^2.0.2
 
   #Local Storage
   hive: ^2.2.3
