--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   # UI & Icons
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.9
+  video_player: ^2.8.2
 
   # Utils
   equatable: ^2.0.5
@@ -121,6 +122,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
