--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,7 @@ dependencies:
   auto_size_text: ^3.0.0
   slide_countdown: ^2.0.2
   flutter_carousel_widget: ^3.1.0
-
+  dropdown_search: ^6.0.2
   #Local Storage
   hive: ^2.2.3
 
