--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   flutter_carousel_widget: ^3.1.0
   dropdown_search: ^6.0.2
   url_launcher: ^6.3.2
+  pinput: ^5.0.2
   #Local Storage
   hive: ^2.2.3
 
