--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.9
   video_player: ^2.8.2
+  image_picker: ^1.0.8
 
   # Utils
   equatable: ^2.0.5
