--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,11 +2,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- Permissions for image_picker -->
+    <!-- Разрешение на использование камеры для создания фото профиля -->
     <uses-permission android:name="android.permission.CAMERA" />
+    <!-- Разрешение на чтение файлов из внешнего хранилища для выбора изображений -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- Разрешение на запись файлов во внешнее хранилище -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <!-- For Android 13+ (API 33+) -->
+    <!-- Для Android 13+ (API 33+) - разрешение на доступ к медиафайлам -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <application
         android:label="Jankuier"
@@ -41,7 +44,8 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-        <!-- File provider for image_picker -->
+        <!-- File provider для безопасного обмена файлами между приложениями -->
+        <!-- Используется для работы с камерой и галереей через image_picker -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
