--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   dropdown_search: ^6.0.2
   url_launcher: ^6.3.2
   pinput: ^5.0.2
+  input_quantity: ^2.5.0
   #Local Storage
   hive: ^2.2.3
 
