--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,16 @@
     package="kz.kff.jankuier_mobile">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <!-- Permissions for image_picker -->
     <!-- Разрешение на использование камеры для создания фото профиля -->
     <uses-permission android:name="android.permission.CAMERA" />
+
+    <!-- Firebase Cloud Messaging Permissions -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:label="Jankuier"
