--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,8 @@ dependencies:
   input_quantity: ^2.5.0
   #Local Storage
   hive: ^2.2.3
+  flutter_secure_storage: ^9.2.4
+  local_auth: ^2.3.0
   #Firebase
   firebase_core: ^4.1.1
   firebase_messaging: ^16.0.2
