--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   url_launcher: ^6.3.2
   pinput: ^5.0.2
   input_quantity: ^2.5.0
+  mask_text_input_formatter: ^2.9.0
   #Local Storage
   hive: ^2.2.3
   flutter_secure_storage: ^9.2.4
