--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+7
+version: 2.0.0
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -84,6 +84,7 @@ dependencies:
   input_quantity: ^2.5.0
   mask_text_input_formatter: ^2.9.0
   awesome_snackbar_content: 0.1.7
+  keyboard_dismisser: ^3.0.0
   #Local Storage
   hive: ^2.2.3
   flutter_secure_storage: ^9.2.4
