--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   shared_preferences: ^2.5.3
   path_provider: ^2.1.5
   dartz: ^0.10.1
+  package_info_plus: ^8.1.2
   persistent_bottom_nav_bar_v2: ^6.1.0
   flutter_screenutil: ^5.9.3
   qr_flutter: ^4.1.0
